# goit-pythonweb-hw-12

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: a346ec990dcd_user.py  c384200e80b1_init.py  c52a2f1bcdbd_init.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/redis/: redis.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: reset_password.html
tests/: conftest.py  test.db  test_contact_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_integration_utils.py  test_user_repository_unit.py
