[tool.poetry]
name = "goit-pythonweb-hw-10"
version = "0.1.0"
description = ""
authors = ["Volodymyr Antoniuk <voxtobox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
pydantic = "^2.11.3"
fastapi = { extras = ["standard"], version = "^0.115.12" }
uvicorn = "^0.34.1"
email-validator = "^2.2.0"
dotenv = "^0.9.9"
psycopg2-binary = "^2.9.10"
greenlet = "^3.1.1"
passlib = "^1.7.4"
libgravatar = "^1.0.4"
python-multipart = "^0.0.20"
slowapi = "^0.1.9"
fastapi-mail = "^1.4.2"
cloudinary = "^1.44.0"
python-jose = "^3.4.0"
pydantic-settings = "^2.8.1"
bcrypt = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
