[tool.poetry]
name = "goit-pythonweb-hw-12"
version = "0.1.0"
description = ""
authors = ["Volodymyr Antoniuk <voxtobox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
pydantic = "^2.11.3"
fastapi = { extras = ["standard"], version = "^0.115.12" }
uvicorn = "^0.34.1"
email-validator = "^2.2.0"
dotenv = "^0.9.9"
psycopg2-binary = "^2.9.10"
greenlet = "^3.1.1"
libgravatar = "^1.0.4"
python-multipart = "^0.0.20"
slowapi = "^0.1.9"
fastapi-mail = "^1.4.2"
cloudinary = "^1.44.0"
python-jose = "^3.4.0"
pydantic-settings = "^2.8.1"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
aiosqlite = "^0.21.0"
redis = "^5.2.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
aiosqlite = "^0.21.0"
fakeredis = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]